ckurs-wise1718/Material/Tutorien-Code/Blatt01/case_zwei.txt
case_zwei.c: In function 'main':
case_zwei.c:5:5: error: expected ';' before 'return'
     return 0;
     ^
